--- a/draft.org
+++ b/draft.org
@@ -96,12 +96,50 @@ plt.ylabel('Total Financial Loss (in Million $)')
 plt.grid(axis='y')
 
 plt.tight_layout()
-#plt.show()
-
+plt.show()
 #+end_src
 
 #+RESULTS:
 [[file:output/fig/Trends-Financial-Losses-Overall.png]]
+*** Breakdown by Countries
+#+begin_src python :session t :eval no-export :exports both :results table
+trend_df = df.groupby(['Year', 'Country'])['Financial Loss (in Million $)'].sum().unstack(fill_value=0)
+trend_df
+#+end_src
+
+#+RESULTS:
+#+begin_src text
+| Year | Australia |  Brazil |              China |             France |            Germany |   India |              Japan |             Russia |                 UK |                USA |
+|------+-----------+---------+--------------------+--------------------+--------------------+---------+--------------------+--------------------+--------------------+--------------------|
+| 2015 |   1083.64 | 1433.53 |            1230.41 |            1678.81 | 1245.1399999999999 | 1588.71 |            1346.21 |            1608.85 | 1729.6200000000001 |            1565.29 |
+| 2016 |   1823.38 | 1507.33 |            1890.11 |            1126.03 |            1752.33 |  739.05 |             626.25 |            1014.82 |            1837.54 |            1630.42 |
+| 2017 |   1472.65 |  1711.9 |            1146.21 |            1891.72 |             1974.1 | 1701.02 |            1847.73 |            1404.13 |            1278.32 |             1833.9 |
+| 2018 |   1483.63 | 1533.38 |            1054.21 |            1251.98 |            1815.61 | 1918.73 |            1331.31 |            1346.33 |            1419.53 |            1565.77 |
+| 2019 |   1090.43 | 1183.03 |            1258.51 |            1343.36 |            1350.34 | 1254.71 | 1215.3700000000001 |            1431.94 |            1808.93 | 1198.0700000000002 |
+| 2020 |   1291.54 | 1611.79 |            1220.73 | 1859.8899999999999 |            1480.43 |  1580.0 |            2038.73 |            1260.93 |             1789.7 |            1634.21 |
+| 2021 |   1372.29 | 1977.69 |            1572.86 |             1669.3 |            1278.91 | 1334.33 |            1586.41 | 1638.1100000000001 |            1973.24 |            1470.27 |
+| 2022 |   1897.56 | 1270.53 | 1564.6499999999999 |            1216.86 |            1649.13 | 1306.11 |            2018.56 |            1841.52 |            1822.47 |            1283.47 |
+| 2023 |   1841.43 |  1709.4 |            1313.26 |            1599.39 |            1877.72 |  1725.2 |            1732.56 |            1171.56 |            1475.31 |            1512.25 |
+| 2024 |   2046.45 | 1844.04 |            1463.52 |            1334.94 |            1369.53 | 1418.26 |            1454.21 |            2016.54 |            1368.33 |            1118.47 |
+#+end_src
+
+#+begin_src python :session t :eval no-export :var f="output/fig/Trends-finaicial-losses-by-countries.png" :results file :exports both
+# Plotting the data as a bar chart
+trend_df.plot(kind='bar', stacked=True, figsize=(12, 8), width=0.8)
+
+plt.title('Trend of Financial Losses Breakdown by Countries Over Time (2015-2024)')
+plt.xlabel('Year')
+plt.ylabel('Total Financial Loss (in Million $)')
+plt.xticks(rotation=0)  # Keep x-axis labels horizontal
+plt.legend(title='Country')
+plt.grid(axis='y')
+plt.gca().yaxis.set_major_formatter(FuncFormatter(lambda x, _: f'{int(x):,}')) # Apply number formatting
+plt.tight_layout()
+plt.show()
+#+end_src
+
+#+RESULTS:
+[[file:output/fig/Trends-finaicial-losses-by-countries.png]]
 
 *** Breakdown by Attack types
 
@@ -191,6 +229,43 @@ plt.show()
 
 #+RESULTS:
 [[file:output/fig/Trends-affected-users-overall.png]]
+*** Breakdown by Countries
+#+begin_src python :session t :eval no-export :results table :exports both
+trend_df = df.groupby(['Year', 'Country'])['Number of Affected Users'].sum().unstack(fill_value=0)
+trend_df
+#+end_src
+
+#+RESULTS:
+| Year | Australia |   Brazil |    China |   France |  Germany |    India |    Japan |   Russia |       UK |      USA |
+|------+-----------+----------+----------+----------+----------+----------+----------+----------+----------+----------|
+| 2015 |  11071355 | 14625687 | 14315760 | 15389278 | 11814325 | 16632245 | 13971922 | 15601300 | 16071806 | 11799492 |
+| 2016 |  16522223 | 12412484 | 14958638 | 13274133 | 18645691 | 12085161 |  7457248 | 11109717 | 17281052 | 20288237 |
+| 2017 |  15829968 | 19398597 |  9732124 | 19444809 | 16239690 | 14927191 | 18421875 | 15475371 | 14937244 | 17401011 |
+| 2018 |  17636180 | 16441947 | 11024271 | 16231968 | 15503497 | 13355822 | 15287249 | 15885557 | 13163819 | 17244644 |
+| 2019 |  12995593 | 15514625 | 12943762 | 15916554 |  9420383 | 14398125 | 10207336 | 15758126 | 14851883 |  8206541 |
+| 2020 |  11011231 | 15196610 | 13332023 | 19716201 | 12919945 | 19110451 | 17114862 | 16314224 | 17029565 | 17291649 |
+| 2021 |  12383861 | 21467873 | 16158640 | 14749463 | 11751905 | 12091545 | 17272985 | 15183032 | 18009010 | 16173685 |
+| 2022 |  21277139 | 12476964 | 14653503 | 14739242 | 18523873 | 17033943 | 18722065 | 17932425 | 16327854 | 11576152 |
+| 2023 |  15472616 | 19925490 | 13188428 | 12589421 | 16617789 | 17031851 | 17499894 | 12500992 | 16594577 | 12884598 |
+| 2024 |  15811664 | 21346703 | 19273789 | 14178073 | 16238260 | 12512325 | 12756378 | 16431091 | 13198173 | 11334861 |
+
+#+begin_src python :session t :eval no-export :var f="output/fig/Trends-affected-users-by-countries.png" :results file :exports both
+# Plotting the data as a bar chart
+trend_df.plot(kind='bar', stacked=True, figsize=(12, 8), width=0.8)
+
+plt.title('Trend of Number of Affected Users Breakdown by Countries Over Time (2015-2024)')
+plt.xlabel('Year')
+plt.ylabel('Total Number of Affected Users')
+plt.xticks(rotation=0)  # Keep x-axis labels horizontal
+plt.legend(title='Country')
+plt.grid(axis='y')
+plt.gca().yaxis.set_major_formatter(FuncFormatter(lambda x, _: f'{int(x):,}')) # Apply number formatting
+plt.tight_layout()
+plt.show()
+#+end_src
+
+#+RESULTS:
+[[file:output/fig/Trends-affected-users-by-countries.png]]
 
 *** Breakdown by Attack types
 
